docs/styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

header {
    background-color: #333;
    color: #fff;
    padding: 1rem;
    text-align: center;
}

main {
    padding: 1rem;
    flex: 1;
}

section {
    margin-bottom: 1rem;
}

footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 0.5rem;
}

#race-track {
    position: relative;
}

#race-track img {
    max-width: 100%;
    height: auto;
    position: absolute; /* Ensure images are positioned absolutely */
}

th {
    text-align: left;
}

.name {
    padding-right: 30px;
    display: flex;
    align-items: center;
}

.leaderboard-img {
    width: 30px;
    height: 30px;
}

#position-header {
    width: auto;
}

#name-header {
    width: auto;
    padding-right: 20px;
}

#speed-header {
    width: auto;
}

#distance-header {
    width: auto;
}

#time-header {
    width: auto;
}

.race-sippyPup {
    width: 100px;
    height: 100px;
}

.pup-container {
    height: 100px;
    padding-bottom: 10px;
}

@keyframes moveUp {
    from {
        transform: translateY(0%);
    }
    to {
        transform: translateY(-100%);
    }
}

@keyframes moveDown {
    from {
        transform: translateY(0%);
    }
    to {
        transform: translateY(100%);
    }
}

@keyframes moveUpFromBottom {
    from {
        transform: translateY(-100%);
    }
    to {
        transform: translateY(0%);
    }
}

@keyframes moveDownFromTop {
    from {
        transform: translateY(100%);
    }
    to {
        transform: translateY(0%);
    }
}

.position-changed {
    animation-duration: 0.35s;
    animation-timing-function: ease-in-out;
}

.position-changed.move-up {
    animation-name: moveUp;
}

.position-changed.move-down {
    animation-name: moveDown;
}

